# zerobench

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bench.sh  perf-gate.sh
.github/workflows/: ci.yml
docs/: ARCH-TODO.md  PHILOSOPHY.md  design-v0.1.0.md
docs/_internal/: ARCH-REVIEW-2026-04-20.md  ARCH-TAGS.md  README.md  RELEASE.md  REVIEW-2026-04-18.md  UNIFICATION.md  design.md
docs/plans/: 2026-04-16-v0.0.1-impl.md
examples/: chained.rhai  simple.rhai
zerobench-backends/: Cargo.toml
zerobench-backends/src/: dispatch.rs  fanout_core.rs  lib.rs
zerobench-backends/src/http/: cold_connect.rs  mio_h1.rs  mio_h2.rs  mio_tls.rs  mod.rs  raw_h1_common.rs  simple_post.rs
zerobench-backends/src/sse/: fanout.rs  hold.rs  line_parser.rs  mod.rs  reconnect_storm.rs
zerobench-backends/src/ws/: conn.rs  echo_rtt.rs  fanout.rs  frame.rs  handshake.rs  hold.rs  mod.rs  server_push_rtt.rs
zerobench-backends/tests/: http_cold_connect_smoke.rs  http_mio_h1_smoke.rs  http_mio_h2_smoke.rs  sse_backends_smoke.rs  sse_line_parse.rs  ws_backends_smoke.rs  ws_frame_codec.rs  ws_handshake.rs
zerobench-cli/: Cargo.toml
zerobench-cli/src/: cli_args.rs  diff.rs  main.rs  plan_from_cli.rs
zerobench-cli/src/verbs/: calibrate.rs  curve.rs  diff.rs  measure.rs  mod.rs  probe.rs
zerobench-cli/tests/: cli_smoke.rs  cli_tls_smoke.rs  diff_smoke.rs  multi_protocol.rs
zerobench-cli/tests/fixtures/: bench-baseline.json  bench-current.json  bench-regressed.json  browse.http  login.http  scenarios.toml  simple.http
zerobench-core/: Cargo.toml
zerobench-core/src/: archive.rs  calibrate.rs  compare.rs  dispatcher.rs  fingerprint.rs  histogram.rs  json_scan.rs  lib.rs  live_snapshot.rs  machine.rs  plan.rs  plan_builder.rs  rate.rs  report.rs  request_file.rs  rng.rs  runtime.rs  scenario_context.rs  stats.rs  step_exec.rs  stop.rs  template.rs  tls.rs  transport.rs  var.rs
zerobench-core/tests/: dispatcher_saturate.rs  plan_construction.rs  rate_open_loop.rs  report_jsonl.rs  report_snapshot.rs  request_file.rs  stats.rs  template.rs
zerobench-dsl/: Cargo.toml
zerobench-dsl/src/: builders.rs  error.rs  lib.rs  parse.rs
zerobench-dsl/tests/: script_compile.rs
zerobench-http/: Cargo.toml
zerobench-http/src/: cold_connect.rs  conn.rs  conn_tokio.rs  counting_stream.rs  h1.rs  h1_tokio.rs  h2.rs  lib.rs  mio_h1.rs  mio_h2.rs  mio_tls.rs  raw_h1.rs  raw_h1_common.rs  raw_h1_tokio.rs  simple_post.rs  transport_impl.rs
zerobench-http/tests/: cold_connect_smoke.rs  counting_stream.rs  h1_smoke.rs  h2_smoke.rs  mio_h1_smoke.rs  mio_h2_smoke.rs  raw_h1_smoke.rs  raw_h1_tokio_smoke.rs  tls_smoke.rs
zerobench-report/: Cargo.toml
zerobench-report/src/: compare.rs  lib.rs  report.rs
zerobench-report/tests/: report_jsonl.rs  report_snapshot.rs
zerobench-rhai/: Cargo.toml
zerobench-rhai/src/: builders.rs  error.rs  lib.rs  parse.rs
zerobench-rhai/tests/: multi_protocol.rhai  script_compile.rs  script_multi_protocol.rs
zerobench-runtime/: Cargo.toml
zerobench-runtime/src/: archive.rs  calibrate.rs  fingerprint.rs  json_scan.rs  lib.rs  live_snapshot.rs  machine.rs  recorder.rs  runner.rs  stop.rs  tls.rs  transport.rs
zerobench-sse/: Cargo.toml
zerobench-sse/src/: fanout.rs  hold.rs  lib.rs  line_parser.rs  reconnect_storm.rs
zerobench-sse/tests/: backends_smoke.rs  sse_line_parse.rs  sse_multi_scenario.rs  sse_smoke.rs  sse_tls_smoke.rs
zerobench-stub/: Cargo.toml
zerobench-stub-ntex/: Cargo.toml
zerobench-stub-ntex/src/: main.rs
zerobench-stub/src/: main.rs
zerobench-tui/: Cargo.toml
zerobench-tui/src/: export.rs  lib.rs  state.rs  ui.rs
zerobench-tui/src/ui/: common.rs  dataset.rs  errors.rs  help.rs  latency.rs  mod.rs  overview.rs  throughput.rs
zerobench-tui/tests/: tui_render.rs  tui_state.rs
zerobench-ws/: Cargo.toml
zerobench-ws/src/: conn.rs  echo_rtt.rs  fanout.rs  frame.rs  handshake.rs  hold.rs  lib.rs  server_push_rtt.rs
zerobench-ws/tests/: backends_smoke.rs  frame_codec.rs  handshake.rs  ws_multi_scenario.rs  ws_smoke.rs  wss_smoke.rs
