[workspace]
resolver = "2"
members = [
    "zerobench-core",
    "zerobench-runtime",
    "zerobench-report",
    "zerobench-backends",
    "zerobench-dsl",
    "zerobench-tui",
    "zerobench-cli",
    "zerobench-stub",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/zeroship-dev/zerobench"
homepage = "https://github.com/zeroship-dev/zerobench"
authors = ["Ruiyang Ke"]

[workspace.dependencies]
# Local crates
zerobench-core = { path = "zerobench-core", version = "0.1.0", default-features = false }
zerobench-runtime = { path = "zerobench-runtime", version = "0.1.0" }
zerobench-report = { path = "zerobench-report", version = "0.1.0" }
zerobench-backends = { path = "zerobench-backends", version = "0.1.0" }
zerobench-dsl = { path = "zerobench-dsl", version = "0.1.0" }
zerobench-tui  = { path = "zerobench-tui",  version = "0.1.0" }

# Stub server deps (test infrastructure only)
compio = { version = "0.18", features = ["io", "net", "runtime", "macros", "time", "tls"] }
compio-tls = { version = "0.9", features = ["rustls"] }
socket2 = "0.6"

# HTTP
http = "1"
httparse = "1"
h2 = "0.4"

# Core utils
bytes = { version = "1", features = ["serde"] }
smallvec = { version = "1", features = ["union", "serde"] }

# Stats / measurement
hdrhistogram = "7"

# SIMD-accelerated byte search
memchr = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Scripting
rhai = { version = "1.19", features = ["sync"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Concurrency
parking_lot = "0.12"

# RNG + IDs
rand = "0.8"
rand_xoshiro = "0.6"
uuid = { version = "1", features = ["v4", "v7"] }

# Terminal colors
yansi = "1"

# Fast integer formatting
itoa = "1"

# Synchronous epoll event loop
mio = { version = "1", features = ["os-poll", "net"] }

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Errors
thiserror = "2"

# TLS
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
webpki-roots = "0.26"
rcgen = "0.13"

# Config file parsing
toml = "0.8"

# WebSocket primitives
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Time formatting for run_ids
time = { version = "0.3", features = ["formatting", "parsing"] }

# Blake3 for hostname hashing (fast, no rainbow surface for short inputs)
blake3 = "1"

# libc + num_cpus for machine fingerprint collection
libc = "0.2"
num_cpus = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.bench]
inherits = "release"
debug = true

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"
