[package]
name = "zerobench-backends"
description = "Every protocol backend for zerobench (HTTP/1, HTTP/2, SSE, WebSocket) — mio/epoll, zero async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true, default-features = false }
zerobench-runtime = { workspace = true }

# HTTP
http = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }
itoa = { workspace = true }

# Mio backend (synchronous epoll)
mio = { workspace = true }
memchr = { workspace = true }
rand = { workspace = true }

# H2 protocol crate (mio-h2: manually polled from mio)
h2 = { workspace = true }

# Tokio — minimal (io-util only) for h2 crate's AsyncRead/AsyncWrite
tokio = { version = "1", default-features = false, features = ["io-util"] }

rustls = { workspace = true }

# SSE / WS extras
hdrhistogram = { workspace = true }

# WebSocket-specific
sha1 = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
httparse = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
