[package]
name = "zerobench"
description = "Fast, correct, modern HTTP benchmarking tool — mio/epoll, zero async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "zerobench"
path = "src/main.rs"

[features]
default = ["h1"]
full = ["h1", "h2", "sse", "ws", "tui", "script"]

# Protocols
h1 = ["zerobench-http/mio-h1"]
h2 = ["zerobench-http/mio-h2"]
# Protocol modes
ws = ["dep:zerobench-ws", "h1"]
sse = ["dep:zerobench-sse", "h1"]
# Front-ends
tui = ["dep:zerobench-tui"]
script = ["dep:zerobench-rhai", "h1"]

[dependencies]
zerobench-core = { workspace = true, default-features = false }
zerobench-http = { workspace = true, default-features = false }
zerobench-ws = { workspace = true, optional = true }
zerobench-sse = { workspace = true, optional = true }
zerobench-rhai = { workspace = true, optional = true }
zerobench-tui = { workspace = true, optional = true }

base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
mimalloc = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
httparse = { workspace = true }
sha1 = { workspace = true }

[lints]
workspace = true
