[package]
name = "zerobench"
description = "Fast, correct, modern HTTP benchmarking tool — mio/epoll, zero async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "zerobench"
path = "src/main.rs"

[features]
default = []
full = ["tui"]

# Front-ends
tui = ["dep:zerobench-tui"]

[dependencies]
zerobench-core = { workspace = true, default-features = false }
zerobench-runtime = { workspace = true }
zerobench-report = { workspace = true }
zerobench-backends = { workspace = true }
zerobench-rhai = { workspace = true }
zerobench-tui = { workspace = true, optional = true }

base64 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
hdrhistogram = { workspace = true }
mimalloc = { workspace = true }
http = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
httparse = { workspace = true }
sha1 = { workspace = true }

[lints]
workspace = true
