[package]
name = "zerobench-core"
description = "Core plan model, stats, templates, and reporter for zerobench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []

[dependencies]
bytes = { workspace = true }
smallvec = { workspace = true }
hdrhistogram = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
yansi = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
time = { workspace = true }
blake3 = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }

[lints]
workspace = true
