[package]
name = "zerobench-core"
description = "Plan / Scenario / Step type vocabulary for zerobench — HDR stats, templates, variables, histogram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["benchmark", "http", "load-testing", "hdr", "latency"]
categories = ["development-tools::profiling", "command-line-utilities"]

[dependencies]
bytes = { workspace = true }
smallvec = { workspace = true }
hdrhistogram = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
