[package]
name = "zerobench-dsl"
description = "Rhai-based scenario DSL for zerobench — multi-scenario, multi-protocol plan construction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["benchmark", "rhai", "dsl", "script", "load-testing"]
categories = ["development-tools::profiling"]

[dependencies]
zerobench-core = { workspace = true, default-features = false }
rhai = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
