[package]
name = "zerobench-http"
description = "HTTP/1 and HTTP/2 transport for zerobench — mio/epoll, zero async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
mio-h1 = ["dep:mio", "dep:httparse", "dep:itoa", "dep:memchr", "dep:rand"]
mio-h2 = ["mio-h1", "dep:h2", "dep:tokio"]

[dependencies]
zerobench-core = { workspace = true, default-features = false }
http = { workspace = true }
bytes = { workspace = true }

# Raw H1 request/response helpers
httparse = { workspace = true, optional = true }
itoa = { workspace = true, optional = true }

# Mio backend (synchronous epoll)
mio = { workspace = true, optional = true }
memchr = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

# H2 protocol crate (mio-h2: manually polled from mio)
h2 = { workspace = true, optional = true }

# Tokio — minimal (io-util only) for h2 crate's AsyncRead/AsyncWrite
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }

rustls = { workspace = true }

[dev-dependencies]
rustls = { workspace = true }
rcgen = { workspace = true }

[lints]
workspace = true
