[package]
name = "zerobench-report"
description = "Presentation and statistical comparison layer for zerobench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true }
zerobench-runtime = { workspace = true }

hdrhistogram = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
yansi = { workspace = true }

[dev-dependencies]
smallvec = { workspace = true }

[lints]
workspace = true
