[package]
name = "zerobench-rhai"
description = "Rhai plan-builder for zerobench — compile-time scenario DSL"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true, default-features = false }
rhai = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
