[package]
name = "zerobench-runtime"
description = "Runtime infrastructure for zerobench — LiveSnapshot, archive, calibrate, fingerprint, TLS, recorder, runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["benchmark", "http", "load-testing", "hdr", "archive"]
categories = ["development-tools::profiling"]

[dependencies]
zerobench-core = { workspace = true }

# Cross-cutting deps used by runtime infra.
bytes = { workspace = true }
hdrhistogram = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { workspace = true }
thiserror = { workspace = true }
mio = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
time = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
memchr = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
smallvec = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
