[package]
name = "zerobench-sse"
description = "Server-Sent Events transport for zerobench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true, features = ["runtime-compio"] }
zerobench-http = { workspace = true, features = ["runtime-compio", "h1"] }
compio = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
hyper = { workspace = true, features = ["client", "http1"] }
http = { workspace = true }
http-body-util = { workspace = true }
hdrhistogram = { workspace = true }
cyper-core = { workspace = true }

[dev-dependencies]
hyper = { workspace = true, features = ["client", "http1", "server"] }
compio-tls = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

[lints]
workspace = true
