[package]
name = "zerobench-sse"
description = "Server-Sent Events transport for zerobench — mio/epoll, zero async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true, default-features = false }
zerobench-http = { workspace = true, default-features = false, features = ["mio-h1"] }
hdrhistogram = { workspace = true }
mio = { workspace = true }
rustls = { workspace = true }
httparse = { workspace = true }
memchr = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
