[package]
name = "zerobench-stub"
description = "Test-only stub server for zerobench's perf-gate — not published"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "zerobench-stub"
path = "src/main.rs"

[dependencies]
compio = { workspace = true }
compio-tls = { workspace = true }
httparse = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
socket2 = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

[lints]
workspace = true
