[package]
name = "zerobench-ws"
description = "WebSocket transport for zerobench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true }
compio = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hdrhistogram = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
compio = { workspace = true }
httparse = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }

[lints]
workspace = true
