[package]
name = "zerobench-ws"
description = "WebSocket transport for zerobench — mio/epoll, zero async"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
zerobench-core = { workspace = true, default-features = false }
zerobench-http = { workspace = true, default-features = false, features = ["mio-h1"] }
mio = { workspace = true }
rustls = { workspace = true }
bytes = { workspace = true }
httparse = { workspace = true }
sha1 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
hdrhistogram = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
httparse = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
